app/kube/backend-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  namespace: audrey-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-api
  template:
    metadata:
      labels:
        app: final-api
    spec:
      containers:
        - name: final-api
          image: audreyinglish/frontend-final-server:${TAG}
          ports:
            - containerPort: 4000
