app/kube/database-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-dep
  namespace: audrey-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: final-db
  template:
    metadata:
      labels:
        app: final-db
    spec:
      containers:
        - name: final-db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: database-pvc
