app/kube/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: audrey-final
spec:
  selector:
    app: final-api
  ports:
    - port: 4000
      targetPort: 4000
