app/kube/database-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: audrey-final
spec:
  selector:
    app: final-db
  ports:
    - port: 5432
      targetPort: 5432
